# raytracer

./: CMakeLists.txt  Cuda.cpp  Cuda.cu  Cuda.hpp  Light.hpp  Mat4.hpp  Material.hpp  ModelLoader.hpp  Plane.hpp  README.md  Ray.hpp  Renderer.hpp  Scene.hpp  Shape.hpp  Sphere.hpp  Triangle.hpp  Vec3.hpp  config.hpp  raytrace.cpp  remote-run  run  spec.txt  test.cpp
